# dende-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  HELP.md  LICENSE  Makefile  README.md  config_example.yaml
src/: args.rs  lib.rs  main.rs
src/modules/: mod.rs  virustotal.rs
src/modules/logwatcher/: events.rs  files.rs  mod.rs
src/notifiers/: console.rs  mod.rs  telegram.rs
src/utils/: date.rs  events.rs  files.rs  mod.rs
